--- a/index.html
+++ b/index.html
@@ -8,27 +8,79 @@
 </head>
 
 <body>
-    <canvas width="600" height="400"></canvas>
-<script>
-  var tela = document.querySelector('canvas');
-  var pincel = tela.getContext('2d');
+  <meta charset="UTF-8">
 
-  function desenhaEsquadro(xa, ya, xc, yc, cor) {
-    pincel.fillStyle = cor
-    pincel.beginPath();
-    pincel.moveTo(xa, ya);
-    pincel.lineTo(xa, yc);
-    pincel.lineTo(xc, yc);
-    pincel.fill();
-    pincel.fillStyle = 'white'
-    pincel.beginPath();
-    pincel.moveTo((6 * xa + xc) / 7, (9 * ya + 5 * yc) / 14);
-    pincel.lineTo((6 * xa + xc) / 7, (ya + 6 * yc) / 7);
-    pincel.lineTo((5 * xa + 9 * xc) / 14, (ya + 6 * yc) / 7);
-    pincel.fill();
-  }
-  desenhaEsquadro(50, 50, 400, 400, 'black');
-</script>
+  <canvas width="600" height="400"></canvas>
+  
+  <script>
+  
+      function desenhaQuadrado(x, y, tamanho, cor) {
+  
+          pincel.fillStyle = cor;
+          pincel.fillRect(x, y, tamanho, tamanho)
+          pincel.fill();
+      }
+  
+      function desenhaCirculo(x, y, raio, cor) {
+  
+          pincel.fillStyle = cor;
+          pincel.beginPath();
+          pincel.arc(x, y, raio, 0, 2 * 3.14);
+          pincel.fill();
+  
+      }
+  
+      function desenhaPaletaDeCores() {
+  
+          desenhaQuadrado(xVermelho, yQuadrados, tamanhoQuadrados, 'red');
+          desenhaQuadrado(xVerde, yQuadrados, tamanhoQuadrados, 'green');
+          desenhaQuadrado(xAzul, yQuadrados, tamanhoQuadrados, 'blue');
+  
+      }
+  
+      function lidaComMovimentoDoMouse(evento) {
+  
+          var x = evento.pageX - tela.offsetLeft;
+          var y = evento.pageY - tela.offsetTop;
+  
+          if(desenha) {
+  
+              desenhaCirculo(x, y, 5, corAtual);
+          }
+      }
+  
+      function habilitaDesenhar() {
+  
+          desenha = true;
+      }
+  
+      function desabilitaDesenhar() {
+  
+          desenha = false;
+      }
+  
+      var tela = document.querySelector('canvas');
+      var pincel = tela.getContext('2d');
+      pincel.fillStyle = 'lightgray';
+      pincel.fillRect(0, 0, 600, 400);
+  
+      var desenha = false;
+      var corAtual = 'blue';
+      var xVermelho = 0;
+      var xVerde  = 50;
+      var xAzul = 100;
+      var yQuadrados = 0;
+      var tamanhoQuadrados = 50;
+  
+      desenhaPaletaDeCores(); // mostra os quadrados de seleção de cores
+  
+      tela.onmousemove = lidaComMovimentoDoMouse;
+  
+      tela.onmousedown = habilitaDesenhar;
+  
+      tela.onmouseup = desabilitaDesenhar;
+  
+  </script>
 </body>
 
 </html>
